--- a/frontend/hackathon_app/src/InputForm/InputForm.scss
+++ b/frontend/hackathon_app/src/InputForm/InputForm.scss
@@ -1,8 +1,6 @@
-// InputForm.scss
-
 .input-form {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 0 auto; 
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -20,6 +18,7 @@
     form {
         display: flex;
         flex-direction: column;
+        align-items: center; 
 
         label {
             margin-bottom: 10px;
