--- a/frontend/hackathon_app/src/components/WelcomePage/index.scss
+++ b/frontend/hackathon_app/src/components/WelcomePage/index.scss
@@ -2,6 +2,7 @@ body, html {
     padding: 0%;
     margin: 0;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif, sans-serif;
+    
 }
 video {
 object-fit: cover;
@@ -30,7 +31,7 @@ height:100%;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1000; /* Ensures the nav bar stays on top of other content */
+    z-index: 1000; 
   }
   
 .container {
@@ -80,15 +81,22 @@ section div{
 
 .button {
     display: inline-block;
-    background-color: #d60505;
+    background-color: #c70707;
     color: white;
+    outline: none;
     padding: 10px 20px;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 100px;
+    border: 2px solid #000000;
     transition: background-color 0.3s;
     position: relative;
+    border: none;
+    transition: all 0.3s ease;
+    
 }
 
 .button:hover {
-    background-color: #0056b3;
+    background-color: #a40303;
+    transform: translateY(-5px);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, .9);
 }
