--- a/frontend/hackathon_app/src/routes/InputForm/InputForm.scss
+++ b/frontend/hackathon_app/src/routes/InputForm/InputForm.scss
@@ -1,6 +1,19 @@
 $input-form-font: 'Times New Roman', sans-serif;
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .input-form {
+  opacity: 0;
+  animation: fadeIn 1s ease-out forwards;
+  animation-delay: 2s; 
+
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
@@ -8,6 +21,8 @@ $input-form-font: 'Times New Roman', sans-serif;
   border-radius: 5px;
   text-align: center;
   font-family: $input-form-font; 
+  
+  
 
   header {
     margin-bottom: 20px;
