--- a/frontend/hackathon_app/src/routes/Loading Screen 1/LoadingScreen1.scss
+++ b/frontend/hackathon_app/src/routes/Loading Screen 1/LoadingScreen1.scss
@@ -1,7 +1,18 @@
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .loading-container {
   position: relative;
   width: 100%;
   height: 100vh;
+  animation: fadeOut 2s ease-out forwards;
+  
 }
 
 .background-image {
