--- a/frontend/hackathon_app/src/routes/Loading Screen 1/LoadingScreen1.scss
+++ b/frontend/hackathon_app/src/routes/Loading Screen 1/LoadingScreen1.scss
@@ -11,8 +11,19 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  animation: fadeOut 2s ease-out forwards;
-  
+  animation: fadeOut 1s ease-out forwards;
+  animation-delay: 1s;
+  .loading-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    animation: fadeOut 1s ease-out forwards;
+    animation-delay: 1.4s;
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
 }
 
 .background-image {
@@ -23,13 +34,3 @@
   position: relative;
 }
 
-.loading-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 24px;
-  text-align: center;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
