--- a/frontend/hackathon_app/src/routes/InputForm/InputForm.scss
+++ b/frontend/hackathon_app/src/routes/InputForm/InputForm.scss
@@ -23,8 +23,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   text-align: center;
-  font-family: $input-form-font; 
-
+  font-family: 'Kollesktif', sans-serif;
   opacity: 0;
   animation: fadeIn 1s ease-out forwards;
   animation-delay: 2s; 
