--- a/frontend/hackathon_app/src/routes/InputForm/InputForm.scss
+++ b/frontend/hackathon_app/src/routes/InputForm/InputForm.scss
@@ -12,6 +12,12 @@
   }
 }
 
+body {
+  background-image: url('BUFall.jpeg');
+  background-size: cover; 
+  background-position: center;
+}
+
 .input-form {
   position: absolute;
   top: 50%;
@@ -20,13 +26,12 @@
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
   border-radius: 5px;
   text-align: center;
-  font-family: 'Kollesktif', sans-serif;
+  font-family: 'Kollektif', sans-serif;
   opacity: 0;
   animation: fadeIn 1s ease-out forwards;
-  animation-delay: 2s; 
+  animation-delay: 2s;
 
   header {
     margin-bottom: 20px;
@@ -95,6 +100,7 @@
   background-color: #ffffff;
   border: 2px solid #ff4d4f;
   border-radius: 8px;
+  display: none; 
 
   input {
     width: calc(100% - 30px);
@@ -131,4 +137,13 @@
       background-color: #e63946;
     }
   }
+}
+
+.first-name-field.active,
+.preferences-field.active,
+.college-field.active,
+.major-field.active,
+.graduation-field.active,
+.transcript-field.active {
+  display: block;
 }
